examples/envoy/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

static_resources:
  clusters:
    - name: ext_authz-grpc-service
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: ext_authz-grpc-service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 9001
    - name: ratelimit
      type: STRICT_DNS
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      protocol_selection: USE_CONFIGURED_PROTOCOL
      http2_protocol_options: {}
      load_assignment:
        cluster_name: ratelimit
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8081
    - name: mock-sms
      # connect_timeout: 20s
      # dns_refresh_rate: 5s
      # dns_lookup_family: V4_ONLY
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: mock-sms
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9080
    - name: mock
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: mock
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: envoy-mock
                      port_value: 9999

  listeners:
    - name: HTTPSListener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8888
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext"
              common_tls_context:
                tls_certificates:
                  certificate_chain:
                    # filename: "/etc/cc/security/keystore/cc.pem"
                    filename: "/Users/renuka/releases/cc/choreo-connect-1.1.0/docker-compose/resources/router/security/keystore/mg.pem"
                  private_key:
                    # filename: "/etc/cc/security/keystore/cc.key"
                    filename: "/Users/renuka/releases/cc/choreo-connect-1.1.0/docker-compose/resources/router/security/keystore/mg.key"
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress-https
                use_remote_address: false
                stream_idle_timeout: 300s
                request_timeout: 0s
                http_filters:
                  # TODO: CORS filter
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      grpc_service:
                        envoy_grpc:
                          cluster_name: ext_authz-grpc-service
                        timeout: 0.250s
                      transport_api_version: V3
                      include_peer_certificate: true
                      clear_route_cache: true # TODO: check this
                  - name: envoy.filters.http.ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                      domain: default
                      request_type: external
                      timeout:
                        seconds: 10 # TODO: REMOVE THIS AFTER TEST
                      stage: 0
                      rate_limited_as_resource_exhausted: false
                      failure_mode_deny: false
                      enable_x_ratelimit_headers: DRAFT_VERSION_03
                      rate_limit_service:
                        grpc_service:
                          envoy_grpc:
                            cluster_name: ratelimit
                        transport_api_version: V3
                  - name: envoy.filters.http.lua
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
                      inline_code: "function envoy_on_request(request_handle)\nend\nfunction envoy_on_response(response_handle)\nend"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      suppress_envoy_headers: true
                route_config:
                  name: route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "localhost:*" # TODO: Remove this vhost
                        - "cc-envoy"
                        - "cc-envoy:*"
                      request_headers_to_remove:
                        - "x-cluster-header"
                      routes:
                      # Health
                        - name: health
                          match:
                            path: /health
                          direct_response:
                            status: 200
                            body:
                              inline_string: '{"statue": "healthy"}'
                          decorator:
                            operation: "/health"
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                              disabled: true
                            envoy.filters.http.lua:
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                              disabled: true
                      # API: SMS
                        - name: sms
                          match:
                            safe_regex:
                              google_re2: {}
                              regex: "^/sms/2.0.0/text[/]{0,1}"
                            headers:
                              - name: ":method"
                                string_match:
                                  safe_regex:
                                    google_re2: {}
                                    regex: "^GET|OPTIONS$"
                          route:
                            cluster_header: x-cluster-header
                            auto_host_rewrite: true
                            regex_rewrite:
                              pattern:
                                google_re2: {}
                                regex: "^/sms/2.0.0/text[/]{0,1}"
                              substitution: "/api/v2/text"
                            # timeout: 60s
                            # idle_timeout: 300s
                            # upgrade_configs:
                            #   - upgrade_type: websocket
                            #     enabled: false
                            # cors:
                            #   allow_methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
                            #   allow_headers: "authorization, Access-Control-Allow-Origin, Content-Type, SOAPAction, apikey, testKey, Internal-Key"
                            #   allow_credentials: false
                            #   allow_origin_string_match:
                            #     - safe_regex:
                            #         google_re2: {}
                            #         regex: ".*"
                          decorator:
                            operation: "cc-envoy:^/sms/2.0.0/text[/]{0,1}"
                          # response_headers_to_remove:
                          #   - x-envoy-upstream-service-time
                          # typed_per_filter_config:
                          #   envoy.filters.http.lua:
                          #     "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute"
                          #     disabled: true
                          #   envoy.filters.http.ext_authz:
                          #     "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                          #     check_settings:
                          #       context_extensions:
                          #         basePath: "/sms/2.0.0"
                          #         method: "POST"
                          #         name: "SMS"
                          #         path: "/sms/2.0.0/text"
                          #         prodClusterName: "carbon.super_clusterProd_cc-envoy_SMS2.0.0"
                          #         sandClusterName: ""
                          #         vHost: "cc-envoy"
                          #         version: "2.0.0"
                          #       disable_request_body_buffering: true
